# jami-commander

./: .gitignore  PyPi-Instructions.md  README.md  help.help.txt  help.manual.txt  help.usage.txt  requirements.txt  setup.cfg
jami_commander/: __init__.py  controller.py  jami-commander  jami_commander.py
jami_commander/controller/: __init__.py  controller.py
scripts/: create-help-help-pre.sh  create-help-help.sh  create-help-manual.sh  create-help-usage.sh  lintmc.sh  pypi-package-1-create.sh  update-1-version.sh  update-2-help-manual.py  update-3-readme.py  update-4-help-help.py  workflow.sh
