[metadata]
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/
name = jami-commander
version = 0.3.0
author = 8go
description = A simple command-line Jami (jami.net) client
long_description = file: PyPi-Instructions.md, README.md
# long_description = file: README.md
long_description_content_type = text/markdown
keywords = Jami, chat, messaging, CLI
url = https://github.com/8go/jami-commander
project_urls =
    Bug Tracker = https://github.com/8go/jami-commander/issues
    repository = https://github.com/8go/jami-commander
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Communications :: Chat

[options]
# use root, i.e. leave empty
package_dir =
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    argparse
    asyncio
    async-timeout # see Issue 161
    dbus-python
    emoji
    errno
    functools
    hashlib
    json
    logging
    markdown
    os
    pkg_resources
    PyGObject # for controller.py:from gi.repository import GLib
    random
    re
    select
    setuptools
    signal
    subprocess
    sys
    tempfile
    textwrap
    threading
    time
    traceback
    typing
    urllib
    uuid


[options.package_data]
# add docu if there is any inside the module(s)
* = *.md, *.rst


[options.entry_points]
console_scripts =
#   desired-command-name = module:function
    jami-commander = jami_commander:main

[options.packages.find]
# where is root directory, i.e. empty
where =
